# tts_webui_extension.kokoro

./: LICENSE  README.md  VOICES.md  pyproject.toml  setup.py
extension_kokoro/: CHOICES.py  __init__.py  download_unidic.py  main.py
extension_kokoro/samples/: __init__.py
tts_webui_extension/kokoro/: CHOICES.py
